--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {margin:0;
 
 }
 .show2{width:850px;
-height:723px;
-border:1 red solid;
+height:750px;
+border:1 transparent solid;
 	background-color:#474f85;
 	margin:0 auto;}
