--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+﻿<<<<<<< HEAD
 ﻿@charset "utf-8";
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,100i,400,900,800i");
 body {
